--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@prisma/client": "^4.12.0",
     "@remix-run/node": "^1.15.0",
     "@remix-run/react": "^1.15.0",
