--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vercel/node": "^2.6.2",
     "babel-plugin-macros": "^3.1.0",
     "bcryptjs": "^2.4.3",
+    "flowbite": "^1.6.5",
     "isbot": "^3.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
