--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "paths": {
       "~/*": ["./app/*"]
     },
+    //     "lib": ["DOM", "DOM.Iterable", "ES2019"],
 
     // Remix takes care of building everything in `remix build`.
     "noEmit": true
